MOADB: fix alignment in dialog

--- a/public/assets/stylesheets/less/files.less
+++ b/public/assets/stylesheets/less/files.less
@@ -191,7 +191,6 @@ input.document-checkbox[type="checkbox"]:indeterminate + label span {
         }
         
         h3 {
-            text-align: center;
             font-size: 140%;
             padding-top: 1em;
         }
@@ -244,7 +243,6 @@ input.document-checkbox[type="checkbox"]:indeterminate + label span {
         }
         
         h3 {
-            text-align: center;
             font-size: 1.1em;
         }
     }
